= LitleOnline CHANGELOG

== Version 8.20.0 (August 7, 2013)

* Feature: More initial support for Recurring, including the ability to update or cancel subscriptions

== Version 8.19.0 (July 29, 2013)

* Feature: Added deptRepayment as a choice for authorizations, forceCapture, captureGivenAuth, sale
* Feature: More initial support for Recurring, including a backwards incompatible changing a field from numberOfPaymentsRemaining to numberOfPayments

== Version 8.18.0 (June 14, 2013)

* Feature: Batch support - see https://gist.github.com/litleSDK/5768846 and https://gist.github.com/litleSDK/5768893
* Feature: Add support for Recurring

== Version 8.17.0 (March 29, 2013)

* Feature: Add support for surcharging credit card transactions
* Feature: Add support for specifying the terminalId on a pos transaction
* Feature: Add support for pos transactions on tied refunds

== Version 8.16.3 (March 1, 2013)

* Bugfix: Add Connection:close header to further avoid concurrent connection limit

== Version 8.16.2 (Febuary 20, 2013)

* Bugfix: Kit target was not copying the httpclient jars into the directory where they would be zipped up.

== Version 8.16.1 (Febuary 19, 2013)

* Bugfix: Avoid concurrent connection limit by shutting down the HttpClient connection manager between requests

== Version 8.16.0 (Febuary 1, 2013)

* Feature: Add recyling to voidResponse

== Version 8.15.0 (January 31, 2013)

* Feature: Add merchantData to echeck verifications and echeck redeposits

== Version 8.14.0 (October 23, 2012)

* Feature: Temporary storage of card validation num on tokens
* Feature: Updating card validation numbers on tokens
* Bugfix: Merged pull request #3 from aingram to speed up performance and avoid concurrent connection limit
* Cleanup: Removed dependency for CXF, based on suggestion from viniciusccarvalho at https://github.com/LitleCo/litle-sdk-for-java/issues/4
* Cleanup: Updated httpclient dependency to version 4.0.1

== Version 8.13.2 (June 18, 2012)
