@@ -141,6 +141,9 @@ public class ResponseFileParser {
 	                    || currentStartingTagInFile.compareToIgnoreCase("<echeckRedepositResponse") == 0
 	                    || currentStartingTagInFile.compareToIgnoreCase("<authReversalResponse") == 0
 	                    || currentStartingTagInFile.compareToIgnoreCase("<registerTokenResponse") == 0
+	                    || currentStartingTagInFile.compareToIgnoreCase("<updateSubscriptionResponse") == 0
+	                    || currentStartingTagInFile.compareToIgnoreCase("<cancelSubscriptionResponse") == 0
+	                    || currentStartingTagInFile.compareToIgnoreCase("<updateCardValidationNumOnTokenResponse") == 0
 	                    || currentStartingTagInFile.compareToIgnoreCase("<accountUpdateResponse") == 0)) {
 			retVal = true;
 		} else if (openingTagToLookFor
@@ -170,6 +173,9 @@ public class ResponseFileParser {
 					|| currentStartingTagInFile.compareToIgnoreCase("</echeckRedepositResponse>") == 0
 					|| currentStartingTagInFile.compareToIgnoreCase("</authReversalResponse>") == 0
 					|| currentStartingTagInFile.compareToIgnoreCase("</registerTokenResponse>") == 0
+					|| currentStartingTagInFile.compareToIgnoreCase("</cancelSubscriptionResponse>") == 0
+					|| currentStartingTagInFile.compareToIgnoreCase("</updateSubscriptionResponse>") == 0
+					|| currentStartingTagInFile.compareToIgnoreCase("</updateCardValidationNumOnTokenResponse>") == 0
 					|| currentStartingTagInFile.compareToIgnoreCase("</accountUpdateResponse>") == 0)) {
 
 			retVal = true;
